# MyFirstCICD

./: CMakeLists.txt  MyFirstCICD.cpp  MyFirstCICD.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md
include/mylib/: utils.h
src/: main.cpp  utils.cpp
tests/: test_add1.cpp  test_add2.cpp  test_add3.cpp
